[package]
name = "pi_task_pool"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"
description = "任务池"
repository = "https://github.com/GaiaWorld/pi_task_pool"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "task-pool"]

[dependencies]
pi_wtree = "0.1"
pi_timer = "0.1"
pi_dyn_uint = "0.1"
pi_deque = "0.1"
pi_slab = "0.1"
pi_time = "0.1"
rand = "0.5"
flame = "0.2"
flamer = "0.3"